# global-observatory

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/commands/: refresh-events.md  refresh-history.md  refresh-threats.md
.github/workflows/: pages.yml  publish-events.yml  staleness.yml  validate.yml
data/events/: afghanistan-nuristan-floods-2026.json  algeria-wildfires-2026.json  bangladesh-floods-chattogram-2026.json  china-floods-guangxi-hunan-2026.json  ebola-bundibugyo-drc-2026.json  el-obeid-siege-sudan-2026.json  europe-heatwave-2026.json  france-wildfire-fontainebleau-2026.json  france-wildfires-pyrenees-2026.json  mexico-earthquake-chiapas-2026.json  mindanao-earthquake-philippines-2026.json  portugal-wildfires-2026.json  spain-wildfire-almeria-2026.json  sudan-cholera-outbreak-2026.json  sudan-displacement-crisis.json  typhoon-bavi-guam-mariana-2026.json  venezuela-earthquake-2026.json
data/historical/: aleppo-earthquake-1138.json  an-lushan-rebellion.json  antonine-plague.json  armenian-genocide.json  bengal-famine-1770.json  bengal-famine-1943.json  bhola-cyclone.json  black-death.json  china-floods-1931.json  classic-maya-collapse.json  cocoliztli-epidemics.json  covid-19-pandemic.json  fall-of-ur.json  fall-of-western-rome.json  four-point-two-kiloyear-event.json  great-chinese-famine.json  great-famine-1315.json  great-plague-of-london.json  harappan-decline.json  hiv-aids-pandemic.json  indian-ocean-tsunami.json  influenza-pandemic-1918.json  irish-great-famine.json  krakatoa-eruption.json  laki-eruption.json  late-bronze-age-collapse.json  lisbon-earthquake-1755.json  punic-wars.json  (+15 more)
docs/: ARCHITECTURE.md  BACKLOG.md
frontend/: app.js  index.html  map.js  styles.css
pipeline/: __init__.py  audit.py  changelog.py  client.py  config.py  curate.py  frontend.py  gate.py  models.py  run.py  schema.py  store.py
scripts/: author_historical.py  build_frontend.py  probe_haiku.py  serve_frontend.py  validate_data.py
tests/: test_audit.py  test_author_event.py  test_author_historical.py  test_author_threat.py  test_cost.py  test_models_roundtrip.py  test_quarantine_gate.py  test_schema.py  test_store.py
(+20 files in other folders)
